# SALT

./: .gitignore  README.md  settings.gradle
beads/: build.gradle
mobile/: build.gradle
mobile/src/androidTest/java/com/salthacks/salt/: ExampleInstrumentedTest.java
mobile/src/aubio/: CMakeLists.txt  aubio_priv.h  chance_the_wrapper.c
mobile/src/aubio/io/: audio_unit.c
mobile/src/main/: AndroidManifest.xml
mobile/src/main/java/com/salthacks/salt/: MainActivity.java
mobile/src/main/res/layout/: activity_main.xml  content_main.xml
mobile/src/main/res/menu/: menu_main.xml
mobile/src/main/res/values/: strings.xml
mobile/src/test/java/com/salthacks/salt/: ExampleUnitTest.java
wear/: build.gradle
wear/src/main/: AndroidManifest.xml
wear/src/main/java/com/salthacks/salt/: MainActivity.java
wear/src/main/res/drawable/: round_button_background.xml
wear/src/main/res/layout/: activity_main.xml
wear/src/main/res/values/: colors.xml  strings.xml
wear/src/main/res/values-v21/: styles.xml
